--- a/movies/index.html
+++ b/movies/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
-    <title>My movies</title>
+    <title>My Movies</title>
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body ng-controller="ApplicationController as appCon">
